--- a/css/custom.css
+++ b/css/custom.css
@@ -3,9 +3,22 @@ html, body {
 }
 
 body {
-	padding: 50px 0 0 0;
+	padding: 65px 0 0 0;
 	font-family: 'Roboto Slab', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+
+
+/* datepicker in foreground so it is displayed infront of modals */
+.datepicker {
+	z-index: 1060;
+}
+
+#tracking-time {
+	margin: 5px 15px;
+	color: #fff;
+	font-size: 2em;
+}
+
 /*
 .navmenu {
 	padding-top: 50px;
