--- a/css/custom.css
+++ b/css/custom.css
@@ -22,6 +22,23 @@ button {
 	outline: 0 !important;
 }
 
+
+
+#overview-week {
+	border-width: 0 1px 0 0 !important;
+}
+
+#overview-week th:first-child,
+#overview-week td:first-child {
+
+	border: 0 none !important;
+}
+
+
+#overview-week th {
+	border-top: 1px solid #ddd;
+}
+
 #overview-week td {
 	position: relative;
 }
