Clickable columns in week overview to select currently displayed day
Change-Id: Ie2378f4174d33eeb949092ab74ede2d4b2f7bef6
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/css/custom.css
+++ b/css/custom.css
@@ -85,6 +85,7 @@ button {
 /* working period block */
 #overview-week tbody td {
 	position: relative;
+	cursor: pointer;
 }
 #overview-week tbody td .working-period {
 	position: absolute;
