Working periods can be edited, saved and deleted
Change-Id: If9173a4cb0bb103703dc444ac323cf2a702acd65
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/css/custom.css
+++ b/css/custom.css
@@ -52,6 +52,27 @@ button {
 
 
 
+/**
+ * day overview styles
+ */
+
+#overview-day-info {
+	width: auto;
+}
+#overview-day-periods input {
+	width: 60px;
+}
+#overview-day-periods input[disabled],
+#overview-day-info[disabled] {
+	height: auto;
+	margin: 0;
+	padding: 0 0.5em;
+	border: 0 none;
+	box-shadow: none;
+	cursor:default;
+	background-color: transparent;
+}
+
 
 /**
  * weekly overview styles
