Bugfix day selection in week overview
Change-Id: I368a2951112aa8e80957c6c4382557f59c2881ba
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/css/custom.css
+++ b/css/custom.css
@@ -51,7 +51,6 @@ button {
 }
 
 
-
 /**
  * day overview styles
  */
@@ -110,6 +109,9 @@ button {
 #overview-week tbody td {
 	position: relative;
 	cursor: pointer;
+}
+#overview-week tbody td[data-timestamp="false"] {
+	cursor: default;
 }
 #overview-week tbody td:first-child {
 	cursor: default;
